metadata/sf-prod/force-app/main/default/objects/Reseller_Agreement__c/Reseller_Agreement__c.object-meta.xml
<CustomObject>
    <description>Reseller Agreement that a customer has with a subsidiary</description>
    <label>Reseller Agreement</label>
    <nameField>
        <displayFormat>RA# {0000}</displayFormat>
        <label>Reseller Agreement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reseller Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>