metadata/sf-prod/force-app/main/default/objects/Reseller_Agreement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account that signed the Reseller Agreement</description>
    <inlineHelpText>Account that signed the Reseller Agreement</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reseller Agreements</relationshipLabel>
    <relationshipName>Reseller_Agreements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>