metadata/sf-prod/force-app/main/default/objects/Reseller_Agreement__c/fields/Reseller_Agreement_Link__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Agreement_Link__c</fullName>
    <description>URL pointing to the reseller agreement (Preferably NetSuite URL)</description>
    <inlineHelpText>URL pointing to the reseller agreement (Preferably NetSuite URL)</inlineHelpText>
    <label>Reseller Agreement Link</label>
    <required>true</required>
    <type>Url</type>
</CustomField>