metadata/sf-prod/force-app/main/default/objects/Reseller_Agreement__c/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Subsidiary for which the Reseller Agreement was signed</description>
    <inlineHelpText>Subsidiary for which the Reseller Agreement was signed</inlineHelpText>
    <label>Subsidiary</label>
    <referenceTo>Subsidiary__c</referenceTo>
    <relationshipLabel>Reseller Agreements</relationshipLabel>
    <relationshipName>Reseller_Agreements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>